[package]
name = "cityio_dumper"
version = "0.1.0"
authors = ["yasushisakai <ysshski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest="0.9.19"
serde_json="1.0.0"
cs_cityio_backend={path="../cityio"}
regex="1"
